--- a/projet.css
+++ b/projet.css
@@ -5,14 +5,57 @@
 body{
     background-color: #333;
 }
+
+
 h1{
-    padding: 20px 0;
+    padding: 10px 0;
     width: 100%;
     text-align: center;
     margin-top: 0;
     margin-bottom: 30px;
     background-color: orangered;
+
 }
+.blockFilm{
+    width: 80%;
+    margin: 100px auto 70px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
+    grid-gap: 30px;
+}
+
+.image1, .image2, .image3, .image4, .image5, .image6{
+    width: 310px;
+    height: 420px;
+    border: none;
+    border-radius: 7px;
+}
+
+.image1, .image2, .image3, .image4, .image5, .image6:hover{
+    cursor: pointer;
+}
+
+
+.nombrePlace{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 43%;
+    padding: 10px;
+    border: black solid 2px;
+    border-radius: 7px;
+    background-color: orangered;
+}
+
+.nombrePlace:hover{
+    cursor: pointer;
+}
+
+.space{
+    height: 100px;
+}
+
+
+
 
 /*#blockFilm{
     width: 80%;
